--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap');
 
+/* === GERAL ======================================== */
 :root{
     --primary-color: #00856F;
     --headline: #212529;
     --paragraph: #495057;
     --brand-beige: #FFFAF1;
     --brand-light:  #DCE9E2;
+
+    --nav-height: 7.2rem;
 }
 
 *{
@@ -19,25 +22,43 @@ body{
     text-align: center;
 }
 
-header{
+.wrapper{
     width: 37.5rem;
-    margin: 0 auto;
-    margin-top: 4.1rem;
+    margin-inline: auto;
+    padding-inline: 2.4rem;
 }
 
-h4{
+/* ==== HEADER ======================================= */
+
+header{
+    margin-top: calc(4.1rem + var(--nav-height));
+}
+
+header::before{
+    content: " ";
+    width: 100vw;
+    height: calc(108rem + var(--nav-height));
+    display: block;
+    background-color: var(--brand-light);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
+header h4{
     font-size: .875rem;
     color: var(--primary-color);
     margin-bottom: 1.6rem;
 }
 
-h1{
+header h1{
     font-size: 3.4rem;
     color: var(--headline);
     line-height: 130%;
 }
 
-p{
+header p{
     font-size: 1.8rem;
     line-height: 150%;
     font-weight: 400;
@@ -45,7 +66,7 @@ p{
     margin-bottom: 3.2rem;
 }
 
-button{
+header button{
     background-color: var(--primary-color);
     border: none;
     border-radius: 4rem;
@@ -61,6 +82,13 @@ button{
     justify-content: center;
     gap: 1.6rem;
     margin-inline: auto;
+}
+
+header img{
+    width: 26.4rem;
+    display: block;
+    margin-inline: auto;
+    object-position: 0 20px;
 }
 
 .stats{
@@ -89,21 +117,35 @@ button{
     font-size: 1rem;
 }
 
-header img{
-    width: 26.4rem;
-    display: block;
-    margin-inline: auto;
-    object-position: 0 20px;
+/* ==== NAVGATION ======================================= */
+
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: var(--nav-height);
+    position: fixed;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
-header::before{
-    content: '';
-    width: 100vh;
-    height: 108rem;
-    display: block;
-    background-color: var(--brand-light);
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
+
+nav .wrapper{
+    display: flex; 
+    align-items: center;
+    justify-content: space-between;
+}
+
+nav.scroll{
+    background: var(--primary-color);
+    width: 100vw;
+}
+
+nav.scroll svg:nth-child(1) path{
+    fill: #ffff;
+}
+
+nav.scroll svg:nth-child(2) path{
+    stroke: #ffff;
 }
